[package]
name = "word_suffix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.pyo3]
pyo3 = "0.17.1"
features = ["extension-module"]


[lib]
name = "string_sum"
crate-type = ["cdylib"]